--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.qooxdoo.archetypes</groupId>
+  <groupId>org.qooxdoo</groupId>
   <artifactId>qooxdoo-archetype-gui</artifactId>
-  <version>1.4</version>
+  <version>1.4-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>qooxdoo-archetype-gui</name>
   <description>An archetype to create a qooxdoo application</description>
+
+  <parent>
+    <groupId>org.qooxdoo</groupId>
+    <artifactId>qooxdoo-maven-parent</artifactId>
+    <version>1.5-SNAPSHOT</version>
+  </parent>
+
+  <scm>
+    <connection>scm:git:git://github.com/salmon-charles/qooxdoo-maven.git</connection>
+    <developerConnection>scm:git:git@github.com:salmon-charles/qooxdoo-maven.git</developerConnection>
+    <url>https://github.com/salmon-charles/qooxdoo-maven</url>
+  </scm>
 
   <build>
     <extensions>
