--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -206,7 +206,7 @@
           <!-- GENERATE manifest.json & config.json -->
           <execution>
             <id>generate-qooxdoo-config</id>
-            <phase>process-resources</phase>
+            <phase>generate-resources</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
@@ -224,7 +224,7 @@
           <!-- GENERATE html -->
           <execution>
             <id>generate-qooxdoo-html</id>
-            <phase>process-resources</phase>
+            <phase>generate-resources</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
