Changed some prop names to be more compliant with the upcoming qooxdoo plugin

--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
@@ -26,7 +26,7 @@
     "namespace"   : "${qooxdoo.application.namespace}",
     "encoding"    : "${project.build.sourceEncoding}",
     "class"       : "${qooxdoo.application.sourcePath}",
-    "resource"    : "${qooxdoo.application.resourcePath}",
+    "resource"    : "${qooxdoo.application.resourcesPath}",
     "translation" : "${qooxdoo.application.translationPath}",
     "type"        : "application"
   }
