--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -19,10 +19,10 @@
     <qooxdoo.sdk.path>${project.build.directory}/qooxdoo-sdk</qooxdoo.sdk.path>
     <qooxdoo.application.namespace>${artifactId}</qooxdoo.application.namespace>
     <qooxdoo.application.sourcePath>${project.basedir}/src/main/qooxdoo</qooxdoo.application.sourcePath>
-    <qooxdoo.application.resourcePath>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.resourcePath>
+    <qooxdoo.application.resourcesPath>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.resourcesPath>
     <qooxdoo.application.translationPath>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.translationPath>
-    <qooxdoo.application.root>${project.build.directory}/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.root>
-    <qooxdoo.application.cache>${qooxdoo.application.root}/cache</qooxdoo.application.cache>
+    <qooxdoo.application.outputPath>${project.build.directory}/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.outputPath>
+    <qooxdoo.application.cache>${qooxdoo.application.outputPath}/cache</qooxdoo.application.cache>
     
     <!-- Python settings -->
     <python.maven.interpreter>python</python.maven.interpreter>
@@ -139,7 +139,7 @@
                       <arg value="${qooxdoo.sdk.path}/tool/bin/generator.py" />
                       <arg value="source" />
                       <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.path}" />
-                      <arg value="--config=${qooxdoo.application.root}/config.json" />
+                      <arg value="--config=${qooxdoo.application.outputPath}/config.json" />
                     </exec>
                   </tasks>
                 </configuration>
@@ -180,7 +180,7 @@
                       <arg value="${qooxdoo.sdk.path}/tool/bin/generator.py" />
                       <arg value="build" />
                       <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.path}" />
-                      <arg value="--config=${qooxdoo.application.root}/config.json" />
+                      <arg value="--config=${qooxdoo.application.outputPath}/config.json" />
                     </exec>
                   </tasks>
                 </configuration>
@@ -211,10 +211,10 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${qooxdoo.application.root}</outputDirectory>
+              <outputDirectory>${qooxdoo.application.outputPath}</outputDirectory>
               <resources>          
                 <resource>
-                  <directory>${qooxdoo.application.resourcePath}/config</directory>
+                  <directory>${qooxdoo.application.resourcesPath}/config</directory>
                   <filtering>true</filtering>
                 </resource>
               </resources>              
@@ -229,10 +229,10 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${qooxdoo.application.root}/source</outputDirectory>
+              <outputDirectory>${qooxdoo.application.outputPath}/source</outputDirectory>
               <resources>          
                 <resource>
-                  <directory>${qooxdoo.application.resourcePath}/html</directory>
+                  <directory>${qooxdoo.application.resourcesPath}/html</directory>
                   <filtering>true</filtering>
                 </resource>
               </resources>              
