--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
@@ -42,7 +42,7 @@
     "API_EXCLUDE"  : ["qx.test.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*", "${APPLICATION}.simulation.*"],
     "LOCALES"      : [ "en" ],
     "CACHE"        : "${qooxdoo.application.cache}",
-    "ROOT"         : "${qooxdoo.application.root}"
+    "ROOT"         : "${qooxdoo.application.outputPath}"
   }
 
   // You only need to edit the remainder of this file, if you want to customize
