--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
@@ -25,9 +25,9 @@
   {
     "namespace"   : "${qooxdoo.application.namespace}",
     "encoding"    : "${project.build.sourceEncoding}",
-    "class"       : "${qooxdoo.application.sourcePath}",
-    "resource"    : "${qooxdoo.application.resourcesPath}",
-    "translation" : "${qooxdoo.application.translationPath}",
+    "class"       : "${qooxdoo.application.sourceDirectory}",
+    "resource"    : "${qooxdoo.application.resourcesDirectory}",
+    "translation" : "${qooxdoo.application.translationDirectory}",
     "type"        : "application"
   }
 }
