--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
@@ -41,8 +41,8 @@
     "QXTHEME"      : "${APPLICATION}.theme.Theme",
     "API_EXCLUDE"  : ["qx.test.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*", "${APPLICATION}.simulation.*"],
     "LOCALES"      : [ "en" ],
-    "CACHE"        : "${qooxdoo.application.cache}",
-    "ROOT"         : "${qooxdoo.application.outputPath}"
+    "CACHE"        : "${qooxdoo.application.cacheDirectory}",
+    "ROOT"         : "${qooxdoo.application.outputDirectory}"
   }
 
   // You only need to edit the remainder of this file, if you want to customize
