--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
@@ -25,7 +25,7 @@
   {
     "namespace"   : "${qooxdoo.application.namespace}",
     "encoding"    : "${project.build.sourceEncoding}",
-    "class"       : "${qooxdoo.application.sourceDirectory}",
+    "class"       : "${qooxdoo.application.sourcesDirectory}",
     "resource"    : "${qooxdoo.application.resourcesDirectory}",
     "translation" : "${qooxdoo.application.translationDirectory}",
     "type"        : "application"
