--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -18,7 +18,7 @@
   	<qooxdoo.sdk.version>1.4</qooxdoo.sdk.version>
     <qooxdoo.sdk.directory>${project.build.directory}/qooxdoo-sdk</qooxdoo.sdk.directory>
     <qooxdoo.application.namespace>${artifactId}</qooxdoo.application.namespace>
-    <qooxdoo.application.sourceDirectory>${project.basedir}/src/main/qooxdoo</qooxdoo.application.sourceDirectory>
+    <qooxdoo.application.sourcesDirectory>${project.basedir}/src/main/qooxdoo</qooxdoo.application.sourcesDirectory>
     <qooxdoo.application.resourcesDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.resourcesDirectory>
     <qooxdoo.application.translationDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.translationDirectory>
     <qooxdoo.application.outputDirectory>${project.build.directory}/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.outputDirectory>
@@ -134,8 +134,8 @@
                 <configuration>
                   <tasks>
                     <echo>Compiling qooxdoo '${qooxdoo.application.name}' application (DEVELOPMENT VERSION)</echo>
-                    <echo>Application source path : ${qooxdoo.application.sourceDirectory}</echo>
-                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourceDirectory}">
+                    <echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
+                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourcesDirectory}">
                       <arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
                       <arg value="source" />
                       <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
@@ -175,8 +175,8 @@
                 <configuration>
                   <tasks>
                     <echo>Compiling qooxdoo '${qooxdoo.application.name}' application (PRODUCTION-VERSION)</echo>
-                    <echo>Application source path : ${qooxdoo.application.sourceDirectory}</echo>
-                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourceDirectory}">
+                    <echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
+                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourcesDirectory}">
                       <arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
                       <arg value="build" />
                       <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
