--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -1,246 +1,270 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>${groupId}</groupId>
-  <artifactId>${artifactId}</artifactId>
-  <version>${version}</version>
-  <packaging>war</packaging>
-  
-  <name>${artifactId}</name>
-  <description>Application description</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>${groupId}</groupId>
+	<artifactId>${artifactId}</artifactId>
+	<version>${version}</version>
+	<packaging>war</packaging>
 
-<properties>
-    <!-- Qooxdoo properties (safely change)-->
-    <qooxdoo.application.name>${artifactId}</qooxdoo.application.name>
-    <qooxdoo.application.summary>${project.name}</qooxdoo.application.summary>
-    <qooxdoo.application.description>${project.description}</qooxdoo.application.description>
-    <!-- Qooxdoo properties (DONT CHANGE UNLESS YOU KNOW WHAT YOU ARE DOING)-->
-  	<qooxdoo.sdk.version>1.4</qooxdoo.sdk.version>
-    <qooxdoo.sdk.directory>${project.build.directory}/qooxdoo-sdk</qooxdoo.sdk.directory>
-    <qooxdoo.application.namespace>${artifactId}</qooxdoo.application.namespace>
-    <qooxdoo.application.sourcesDirectory>${project.basedir}/src/main/qooxdoo</qooxdoo.application.sourcesDirectory>
-    <qooxdoo.application.resourcesDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.resourcesDirectory>
-    <qooxdoo.application.translationDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.translationDirectory>
-    <qooxdoo.application.outputDirectory>${project.build.directory}/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.outputDirectory>
-    <qooxdoo.application.cacheDirectory>${qooxdoo.application.outputDirectory}/cache</qooxdoo.application.cacheDirectory>
-    
-    <!-- Python settings -->
-    <python.maven.interpreter>python</python.maven.interpreter>
-    <!-- Project -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>    
-  
-  <repositories>
-    <repository>
-      <id>qooxdoo-repository</id>
-      <url>https://repository-charless.forge.cloudbees.com/release</url>
-    </repository>
-  </repositories>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.qooxdoo</groupId>
-      <artifactId>qooxdoo-sdk</artifactId>
-      <version>1.4</version>
-      <type>zip</type>
-    </dependency>
-  </dependencies>
-  
-  <profiles>
-    <!-- SYSTEM PROFILES -->
-    <profile>
-      <id>linux-system</id>
-      <activation>
-        <os>
-          <name>Linux</name>
-        </os>
-      </activation>
-      <properties>
-        <python.maven.interpreter>python</python.maven.interpreter>
-      </properties>
-    </profile>
-    <profile>
-      <id>windows-system</id>
-      <activation>
-        <os>
-          <family>Windows</family>
-        </os>
-      </activation>
-      <properties>
-        <python.maven.interpreter>python</python.maven.interpreter>
-      </properties>
-    </profile>
-    
-    <!-- UNPACK QOOXDOO SDK -->
-    <profile>
-      <id>qooxdoo-unpacking</id>
-      <activation>
-        <file>
-          <missing>${project.build.directory}/qooxdoo-sdk</missing>
-        </file>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.2</version>
-            <executions>
-              <!--Import qooxdoo sdk and add it to target directory -->
-              <execution>
-                <id>extract-qooxdoo-sdk</id>
-                <phase>process-resources</phase>
-                <goals>
-                  <goal>unpack-dependencies</goal>
-                </goals>
-                <configuration>
-                  <includeArtifactIds>qooxdoo-sdk</includeArtifactIds>
-                  <outputDirectory>${qooxdoo.sdk.directory}</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    
-   <!-- Build profiles
-    * Developpment: -Dbuild.type=dev
-    * Production: default
-   -->
+	<name>${artifactId}</name>
+	<description>Application description</description>
 
-    <profile>
-      <!-- Development environment
-        To build your development web application, run: mvn -Dbuild.type=dev compile
-      -->
-      <id>development</id>
-      <activation>
-      <property>
-          <name>build.type</name>
-          <value>dev</value>
-        </property>
-      </activation>
-      <build>
-        <finalName>${qooxdoo.application.name}</finalName>
-        <!-- Plugins configuration -->
-        <plugins>
-          <!-- Qooxdoo build -->
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>qooxdoo-compile-source</id>
-                <phase>compile</phase>
-                <configuration>
-                  <tasks>
-                    <echo>Compiling qooxdoo '${qooxdoo.application.name}' application (DEVELOPMENT VERSION)</echo>
-                    <echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
-                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourcesDirectory}">
-                      <arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
-                      <arg value="source" />
-                      <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
-                      <arg value="--config=${qooxdoo.application.outputDirectory}/config.json" />
-                    </exec>
-                  </tasks>
-                </configuration>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
+	<properties>
+		<!-- Qooxdoo properties (safely change) -->
+		<qooxdoo.application.name>${artifactId}</qooxdoo.application.name>
+		<qooxdoo.application.summary>${project.name}</qooxdoo.application.summary>
+		<qooxdoo.application.description>${project.description}</qooxdoo.application.description>
+		<!-- Qooxdoo properties (DONT CHANGE UNLESS YOU KNOW WHAT YOU ARE DOING) -->
+		<qooxdoo.sdk.version>1.4</qooxdoo.sdk.version>
+		<qooxdoo.sdk.directory>${project.build.directory}/qooxdoo-sdk</qooxdoo.sdk.directory>
+		<qooxdoo.application.namespace>${artifactId}</qooxdoo.application.namespace>
+		<qooxdoo.application.sourcesDirectory>${project.basedir}/src/main/qooxdoo</qooxdoo.application.sourcesDirectory>
+		<qooxdoo.application.resourcesDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.resourcesDirectory>
+		<qooxdoo.application.translationDirectory>${project.basedir}/src/main/resources/qooxdoo/${qooxdoo.application.namespace}/translation</qooxdoo.application.translationDirectory>
+		<qooxdoo.application.outputDirectory>${project.build.directory}/qooxdoo/${qooxdoo.application.namespace}</qooxdoo.application.outputDirectory>
+		<qooxdoo.application.cacheDirectory>${qooxdoo.application.outputDirectory}/cache</qooxdoo.application.cacheDirectory>
 
-    </profile>
-    <profile>
-      <!-- Production environment
-        To build your web application, run: mvn compile
-      -->
-      <id>production</id>
-      <activation>
-        <property>
-          <name>!build.type</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <!-- Qooxdoo build -->
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>qooxdoo-compile-build</id>
-                <phase>compile</phase>
-                <configuration>
-                  <tasks>
-                    <echo>Compiling qooxdoo '${qooxdoo.application.name}' application (PRODUCTION-VERSION)</echo>
-                    <echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
-                    <exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourcesDirectory}">
-                      <arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
-                      <arg value="build" />
-                      <arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
-                      <arg value="--config=${qooxdoo.application.outputDirectory}/config.json" />
-                    </exec>
-                  </tasks>
-                </configuration>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-  
-  <build>
-    <plugins>
-    
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.5</version>
-        <executions>
-        
-          <!-- GENERATE manifest.json & config.json -->
-          <execution>
-            <id>generate-qooxdoo-config</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${qooxdoo.application.outputDirectory}</outputDirectory>
-              <resources>          
-                <resource>
-                  <directory>${qooxdoo.application.resourcesDirectory}/config</directory>
-                  <filtering>true</filtering>
-                </resource>
-              </resources>              
-            </configuration>         
-          </execution>
-          
-          <!-- GENERATE html -->
-          <execution>
-            <id>generate-qooxdoo-html</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${qooxdoo.application.outputDirectory}/source</outputDirectory>
-              <resources>          
-                <resource>
-                  <directory>${qooxdoo.application.resourcesDirectory}/html</directory>
-                  <filtering>true</filtering>
-                </resource>
-              </resources>              
-            </configuration>            
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  
+		<!-- Python settings -->
+		<python.maven.interpreter>python</python.maven.interpreter>
+		<!-- Project -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>qooxdoo-repository</id>
+			<url>https://repository-charless.forge.cloudbees.com/release</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.qooxdoo</groupId>
+			<artifactId>qooxdoo-sdk</artifactId>
+			<version>1.4</version>
+			<type>zip</type>
+		</dependency>
+	</dependencies>
+
+	<profiles>
+		<!-- SYSTEM PROFILES -->
+		<profile>
+			<id>linux-system</id>
+			<activation>
+				<os>
+					<name>Linux</name>
+				</os>
+			</activation>
+			<properties>
+				<python.maven.interpreter>python</python.maven.interpreter>
+			</properties>
+		</profile>
+		<profile>
+			<id>windows-system</id>
+			<activation>
+				<os>
+					<family>Windows</family>
+				</os>
+			</activation>
+			<properties>
+				<python.maven.interpreter>python</python.maven.interpreter>
+			</properties>
+		</profile>
+
+		<!-- UNPACK QOOXDOO SDK -->
+		<profile>
+			<id>qooxdoo-unpacking</id>
+			<activation>
+				<file>
+					<missing>${project.build.directory}/qooxdoo-sdk</missing>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>2.2</version>
+						<executions>
+							<!--Import qooxdoo sdk and add it to target directory -->
+							<execution>
+								<id>extract-qooxdoo-sdk</id>
+								<phase>initialize</phase>
+								<goals>
+									<goal>unpack-dependencies</goal>
+								</goals>
+								<configuration>
+									<includeArtifactIds>qooxdoo-sdk</includeArtifactIds>
+									<outputDirectory>${qooxdoo.sdk.directory}</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- Build profiles * Developpment: -Dbuild.type=dev * Production: default -->
+
+		<profile>
+			<!-- Development environment To build your development web application, 
+				run: mvn -Dbuild.type=dev compile -->
+			<id>development</id>
+			<activation>
+				<property>
+					<name>build.type</name>
+					<value>dev</value>
+				</property>
+			</activation>
+			<build>
+				<finalName>${qooxdoo.application.name}</finalName>
+				<!-- Plugins configuration -->
+				<plugins>
+					<!-- Qooxdoo build -->
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>qooxdoo-compile-source</id>
+								<phase>compile</phase>
+								<configuration>
+									<tasks>
+										<echo>Compiling qooxdoo '${qooxdoo.application.name}' application (DEVELOPMENT VERSION)</echo>
+										<echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
+										<exec executable="${python.maven.interpreter}"
+											dir="${qooxdoo.application.sourcesDirectory}">
+											<arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
+											<arg value="source" />
+											<arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
+											<arg
+												value="--config=${qooxdoo.application.outputDirectory}/config.json" />
+										</exec>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+		<profile>
+			<!-- Production environment To build your web application, run: mvn compile -->
+			<id>production</id>
+			<activation>
+				<property>
+					<name>!build.type</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<!-- Qooxdoo build -->
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>qooxdoo-compile-build</id>
+								<phase>compile</phase>
+								<configuration>
+									<tasks>
+										<echo>Compiling qooxdoo '${qooxdoo.application.name}' application (PRODUCTION-VERSION)</echo>
+										<echo>Application source path : ${qooxdoo.application.sourcesDirectory}</echo>
+										<exec executable="${python.maven.interpreter}"
+											dir="${qooxdoo.application.sourcesDirectory}">
+											<arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
+											<arg value="build" />
+											<arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
+											<arg
+												value="--config=${qooxdoo.application.outputDirectory}/config.json" />
+										</exec>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<build>
+		<plugins>
+			<!-- Translation -->
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>qooxdoo-translation</id>
+						<phase>generate-resources</phase>
+						<configuration>
+							<tasks>
+								<echo>Generating/Updating translation files</echo>
+								<echo>Translation directory : ${qooxdoo.application.translationDirectory}</echo>
+								<exec executable="${python.maven.interpreter}" dir="${qooxdoo.application.sourcesDirectory}">
+									<arg value="${qooxdoo.sdk.directory}/tool/bin/generator.py" />
+									<arg value="translation" />
+									<arg value="--macro=QOOXDOO_PATH:${qooxdoo.sdk.directory}" />
+									<arg
+										value="--config=${qooxdoo.application.outputDirectory}/config.json" />
+								</exec>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+
+					<!-- GENERATE manifest.json & config.json -->
+					<execution>
+						<id>generate-qooxdoo-config</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${qooxdoo.application.outputDirectory}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${qooxdoo.application.resourcesDirectory}/config</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+
+					<!-- GENERATE html -->
+					<execution>
+						<id>generate-qooxdoo-html</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${qooxdoo.application.outputDirectory}/source</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${qooxdoo.application.resourcesDirectory}/html</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
