--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
@@ -24,7 +24,7 @@
   "provides" : 
   {
     "namespace"   : "${qooxdoo.application.namespace}",
-    "encoding"    : "${project.build.sourceEncoding}",
+    "encoding"    : "${qooxdoo.build.sourceEncoding}",
     "class"       : "${qooxdoo.application.sourcesDirectory}",
     "resource"    : "${qooxdoo.application.resourcesDirectory}",
     "translation" : "${qooxdoo.application.translationDirectory}",
