--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/Manifest.json
@@ -26,7 +26,7 @@
     "namespace"   : "${qooxdoo.application.namespace}",
     "encoding"    : "${qooxdoo.build.sourceEncoding}",
     "class"       : "${qooxdoo.application.sourcesDirectory}",
-    "resource"    : "${qooxdoo.application.resourcesDirectory}",
+    "resource"    : "${qooxdoo.application.resourcesDirectory}/${qooxdoo.application.namespace}",
     "translation" : "${qooxdoo.application.translationDirectory}",
     "type"        : "application"
   }
